--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="script.js"></script>
         <link rel="stylesheet" href="styles.css" />
+        <link href="https://unpkg.com/sanitize.css/page.css" rel="stylesheet" />
     </head>
     <body>
         <nav>
             <ul>
-                <li><a href="main.html">Blog</a></li>
+                <li><a href="index.html">Blog</a></li>
                 <li><a href="#">Publish</a></li>
                 <li><a href="#">Our Team</a></li>
             </ul>
         </nav>
         <main>
             <section>
-                <h2>Month</h2>
+                <h2>Date</h2>
             </section>
             <section>
                 <h2>Your Blogs Post Here</h2>
             </section>
             <section>
-                <h2>Day</h2>
+                <h2>Post List</h2>
             </section>
         </main>
     </body>
