--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="script.js"></script>
         <link rel="stylesheet" href="styles.css" />
-        <link href="https://unpkg.com/sanitize.css/page.css" rel="stylesheet" />
+        <!--<link href="https://unpkg.com/sanitize.css/page.css" rel="stylesheet" />-->
     </head>
     <body>
         <nav>
