Added pages and media
Our team page has picture of team, and button linked between pages.

--- a/ourTeamPage.html
+++ b/ourTeamPage.html
@@ -6,7 +6,7 @@
         <meta name="keywords" content="Unit 1 Project, Focus Web Developer, FNTC">
         <meta name="author" content="Brandon Wright">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="script.js"></script>
+        <script src="scripts.js"></script>
         <link rel="stylesheet" href="styles.css" />
         <!--<link href="https://unpkg.com/sanitize.css/page.css" rel="stylesheet" />-->
     </head>
@@ -23,7 +23,8 @@
                 <h2>Date</h2>
             </section>
             <section>
-                <h2>Your Blogs Post Here</h2>
+                <h2>Meet the team</h2>
+                <img src="images/catFilterTeam.jpg" />
             </section>
             <section>
                 <h2>Post List</h2>
