--- a/publishPage.html
+++ b/publishPage.html
@@ -23,7 +23,12 @@
                 <h2>Date</h2>
             </section>
             <section>
-                <h2>Your Blogs Post Here</h2>
+                <h2>Write your blog here</h2>
+                <form>
+                    <label for="userName">Name:</label><br>
+                    <input type="text">
+                    
+                </form>
             </section>
             <section>
                 <h2>Post List</h2>
