Modified Publish Page
added date choice html

--- a/publishPage.html
+++ b/publishPage.html
@@ -26,8 +26,10 @@
                 <h2>Write your blog here</h2>
                 <form>
                     <label for="userName">Name:</label><br>
-                    <input type="text">
-                    
+                    <input id="userName" name="userName" type="text" placeholder="John Doe or Jane Doe"><br>
+                    <label for="date">Blog date:</label><br>
+                    <input id="date" name="date" type="date"><br>
+
                 </form>
             </section>
             <section>
