--- a/publishPage.html
+++ b/publishPage.html
@@ -34,7 +34,8 @@
                     <label for="blogTitle">Blog title:</label><br>
                     <input form="blogPostForm" id="blogTitle" name="blogTitle" type="text" placeholder="Write you blog title here."><br>
                     <label for="blogPost">Blog post:</label><br>
-                    <textarea form="blogPostForm" id="blogPost" name="blogPost" placeholder="This is where you write your blog."></textarea>
+                    <textarea form="blogPostForm" id="blogPost" name="blogPost" placeholder="This is where you write your blog."></textarea><br>
+                    <input type="submit" value="Submit">
                 </form>
             </section>
             <section>
