--- a/publishPage.html
+++ b/publishPage.html
@@ -35,7 +35,7 @@
                     <input form="blogPostForm" id="blogTitle" name="blogTitle" type="text" placeholder="Write you blog title here."><br>
                     <label for="blogPost">Blog post:</label><br>
                     <textarea form="blogPostForm" id="blogPost" name="blogPost" placeholder="This is where you write your blog."></textarea><br>
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Disabled" disabled>
                 </form>
             </section>
             <section>
