Project complete to spec
added a lot of content and tweaked a bunch

--- a/ourTeamPage.html
+++ b/ourTeamPage.html
@@ -6,14 +6,15 @@
         <meta name="keywords" content="Unit 1 Project, Focus Web Developer, FNTC">
         <meta name="author" content="Brandon Wright">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="scripts.js"></script>
         <link rel="stylesheet" href="styles.css" />
         <!--<link href="https://unpkg.com/sanitize.css/page.css" rel="stylesheet" />-->
+        <script src="scripts.js"></script>
     </head>
     <body>
         <nav>
             <ul>
-                <li><a href="index.html">Blog</a></li>
+                <li class="menuImage"><img src="images/hexagon-2307350_1280.png" alt="square-brackets-and-hexagon"></li>
+                <li><a href="index.html" target="_self">Blog</a></li>
                 <li><a href="publishPage.html">Publish</a></li>
                 <li><a href="ourTeamPage.html">Our Team</a></li>
             </ul>
@@ -21,13 +22,19 @@
         <main>
             <section>
                 <h2>Date</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum malesuada, massa in dignissim interdum, odio lectus tincidunt risus, nec viverra lorem nulla ultrices enim. Phasellus pulvinar tempus dui sed vestibulum. Maecenas nulla felis, pretium a congue vitae, tincidunt posuere elit. Nullam in porttitor enim. Phasellus fringilla nulla facilisis, consequat ex nec, luctus velit. Suspendisse potenti. Proin non aliquet ante, a malesuada dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In bibendum congue lacinia.
+                    Aliquam auctor vel eros eu molestie. Morbi malesuada a nibh et lobortis. Donec porttitor tincidunt sapien et fermentum. Fusce posuere placerat metus, ac sollicitudin nunc. Nam ut massa et massa scelerisque rhoncus id non augue. Nam felis enim, fermentum quis congue vel, aliquet aliquet justo. Fusce semper ultricies faucibus. Proin at fringilla felis. Praesent ut sapien sed lorem sagittis vestibulum. Donec vel egestas nibh, sit amet suscipit purus.</p>
             </section>
-            <section>
+            <section class="ourTeamMainBox">
                 <h2>Meet the team</h2>
-                <img src="images/catFilterTeam.jpg" />
+                <div><img src="images/catFilterTeam.jpg" /></div>
+                <h3>Cat's Code Repository</h3>
+                <p>If you would like to see the code of this cat face, click <span><a href="https://github.com/frameDoubt" target="_blank">here.</a></span></p>
             </section>
             <section>
                 <h2>Post List</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum malesuada, massa in dignissim interdum, odio lectus tincidunt risus, nec viverra lorem nulla ultrices enim. Phasellus pulvinar tempus dui sed vestibulum. Maecenas nulla felis, pretium a congue vitae, tincidunt posuere elit. Nullam in porttitor enim. Phasellus fringilla nulla facilisis, consequat ex nec, luctus velit. Suspendisse potenti. Proin non aliquet ante, a malesuada dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In bibendum congue lacinia.
+                    Aliquam auctor vel eros eu molestie. Morbi malesuada a nibh et lobortis. Donec porttitor tincidunt sapien et fermentum. Fusce posuere placerat metus, ac sollicitudin nunc. Nam ut massa et massa scelerisque rhoncus id non augue. Nam felis enim, fermentum quis congue vel, aliquet aliquet justo. Fusce semper ultricies faucibus. Proin at fringilla felis. Praesent ut sapien sed lorem sagittis vestibulum. Donec vel egestas nibh, sit amet suscipit purus.</p>
             </section>
         </main>
     </body>
