--- a/publishPage.html
+++ b/publishPage.html
@@ -9,12 +9,14 @@
         <script src="script.js"></script>
         <link rel="stylesheet" href="styles.css" />
         <!--<link href="https://unpkg.com/sanitize.css/page.css" rel="stylesheet" />-->
+        <script src="scripts.js"></script>
     </head>
     <body>
         <nav>
 
             <!-- zero margin, padding, top; overflow hidden; position fixed; width 100% -->
             <ul>
+                <li class="menuImage"><img src="images/hexagon-2307350_1280.png" alt="square-brackets-and-hexagon"></li>
                 <li><a href="index.html">Blog</a></li>
                 <li><a href="publishPage.html">Publish</a></li>
                 <li><a href="ourTeamPage.html">Our Team</a></li>
@@ -23,6 +25,8 @@
         <main>
             <section>
                 <h2>Font style</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum malesuada, massa in dignissim interdum, odio lectus tincidunt risus, nec viverra lorem nulla ultrices enim. Phasellus pulvinar tempus dui sed vestibulum. Maecenas nulla felis, pretium a congue vitae, tincidunt posuere elit. Nullam in porttitor enim. Phasellus fringilla nulla facilisis, consequat ex nec, luctus velit. Suspendisse potenti. Proin non aliquet ante, a malesuada dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In bibendum congue lacinia.
+                    Aliquam auctor vel eros eu molestie. Morbi malesuada a nibh et lobortis. Donec porttitor tincidunt sapien et fermentum. Fusce posuere placerat metus, ac sollicitudin nunc. Nam ut massa et massa scelerisque rhoncus id non augue. Nam felis enim, fermentum quis congue vel, aliquet aliquet justo. Fusce semper ultricies faucibus. Proin at fringilla felis. Praesent ut sapien sed lorem sagittis vestibulum. Donec vel egestas nibh, sit amet suscipit purus.</p>
             </section>
             <section>
                 <h2>Write your blog here</h2>
@@ -34,12 +38,14 @@
                     <label for="blogTitle">Blog title:</label><br>
                     <input form="blogPostForm" id="blogTitle" name="blogTitle" type="text" placeholder="Write you blog title here."><br>
                     <label for="blogPost">Blog post:</label><br>
-                    <textarea form="blogPostForm" id="blogPost" name="blogPost" placeholder="This is where you write your blog."></textarea><br>
+                    <textarea form="blogPostForm" id="blogPost" name="blogPost" rows="15" placeholder="This is where you write your blog."></textarea><br>
                     <input type="submit" value="Disabled" disabled>
                 </form>
             </section>
             <section>
                 <h2>Post List</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum malesuada, massa in dignissim interdum, odio lectus tincidunt risus, nec viverra lorem nulla ultrices enim. Phasellus pulvinar tempus dui sed vestibulum. Maecenas nulla felis, pretium a congue vitae, tincidunt posuere elit. Nullam in porttitor enim. Phasellus fringilla nulla facilisis, consequat ex nec, luctus velit. Suspendisse potenti. Proin non aliquet ante, a malesuada dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In bibendum congue lacinia.
+                    Aliquam auctor vel eros eu molestie. Morbi malesuada a nibh et lobortis. Donec porttitor tincidunt sapien et fermentum. Fusce posuere placerat metus, ac sollicitudin nunc. Nam ut massa et massa scelerisque rhoncus id non augue. Nam felis enim, fermentum quis congue vel, aliquet aliquet justo. Fusce semper ultricies faucibus. Proin at fringilla felis. Praesent ut sapien sed lorem sagittis vestibulum. Donec vel egestas nibh, sit amet suscipit purus.</p>
             </section>
         </main>
     </body>
