--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
         <script src="script.js"></script>
         <link rel="stylesheet" href="styles.css" />
         <!--<link href="https://unpkg.com/sanitize.css/page.css" rel="stylesheet" />-->
+        <script src="scripts.js"></script>
     </head>
     <body>
         <nav>
             <ul>
+                <li class="menuImage"><img src="images/hexagon-2307350_1280.png" alt="square-brackets-and-hexagon"></li>
                 <li><a href="index.html">Blog</a></li>
                 <li><a href="publishPage.html">Publish</a></li>
                 <li><a href="ourTeamPage.html">Our Team</a></li>
@@ -24,6 +26,8 @@
             </section>
             <section>
                 <h2>Your Blogs Post Here</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum malesuada, massa in dignissim interdum, odio lectus tincidunt risus, nec viverra lorem nulla ultrices enim. Phasellus pulvinar tempus dui sed vestibulum. Maecenas nulla felis, pretium a congue vitae, tincidunt posuere elit. Nullam in porttitor enim. Phasellus fringilla nulla facilisis, consequat ex nec, luctus velit. Suspendisse potenti. Proin non aliquet ante, a malesuada dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In bibendum congue lacinia.
+                    Aliquam auctor vel eros eu molestie. Morbi malesuada a nibh et lobortis. Donec porttitor tincidunt sapien et fermentum. Fusce posuere placerat metus, ac sollicitudin nunc. Nam ut massa et massa scelerisque rhoncus id non augue. Nam felis enim, fermentum quis congue vel, aliquet aliquet justo. Fusce semper ultricies faucibus. Proin at fringilla felis. Praesent ut sapien sed lorem sagittis vestibulum. Donec vel egestas nibh, sit amet suscipit purus.</p>
             </section>
             <section>
                 <h2>Post List</h2>
